--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".Calendar" />
         <activity android:name=".AppointmentCreator" />
+        <activity android:name=".AddPatient" />
+        <activity android:name=".ShowPatients" />
     </application>
 
 </manifest>
