--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".AddPatient" />
         <activity android:name=".ShowPatients" />
         <activity android:name=".EditPatient" />
+        <activity android:name=".ShowVisits" />
+        <activity android:name=".AddNotes" />
     </application>
 
 </manifest>
