Show all visits of the select patient

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".EditPatient" />
         <activity android:name=".ShowVisits" />
         <activity android:name=".AddNotes" />
+        <activity android:name=".PatientData" />
 
         <receiver
             android:name=".MyReceiver"
